# lyft_to_rosbag

./: README.md
lyft_to_rosbag/: CMakeLists.txt  package.xml
lyft_to_rosbag/nuscenes-devkit/python-sdk/: test.py
lyft_to_rosbag/nuscenes-devkit/setup/: requirements.txt
lyft_to_rosbag/src/: lyft_to_rosbag.cpp  lyft_to_rosbag_raw.cpp  tutorial_lyft.py
lyft_to_rosbag/src/nuscenes/: nuscenes.py
